# villa

./: .gitignore  .gitmodules  README.md
csvs/: CMakeLists.txt  csvs.h  csvs_shlib.c  test_csvs.c  zarr_to_csvs.py
vc4d/: CMakeLists.txt  MIGRATION.md
vc4d/src/cache/: disk_store.cpp  tiered_cache.cpp
vc4d/src/core/: io.cpp  quad_surface.cpp  volume.cpp  zarr.cpp
vc4d/src/ui/: app_state.cpp  main.cpp  main_window.cpp  volume_viewer.cpp
vc4d/tests/: test_grid.cpp  test_math.cpp
vesuvius/: README.md  pyproject.toml  setup.py
vesuvius/docs/: inference.md
vesuvius/models/configuration/: config_manager.py
vesuvius/models/run/: train.py
vesuvius/src/vesuvius/: __init__.py  _version.py  utils.py
vesuvius/tests/structure_tensor/: test_structure_tensor.py
volume-cartographer/: .clang-tidy  .clangd  .gitignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json  Dockerfile  README.md  VC.ini  VC3D_2026-02-09-205548.collapsed  build_from_source.sh  docker_s3_entrypoint.sh  docker_s3_readme.txt  example_affine.json  log.txt  plan.md  pts_new.txt  pyproject.toml  test_multipart.sh  tiled_renderer_pr_plan.txt  ubuntu-22.04-jammy.Dockerfile  ubuntu-24.04-noble-s3.Dockerfile  ubuntu-24.04-noble.Dockerfile  ubuntu-24.10-oracular.Dockerfile  ubuntu-25.04-plucky.Dockerfile  ubuntu-26.04.Dockerfile
volume-cartographer/.github/workflows/: build_docker.yml  ci.yml  codeql.yml  publish_ghcr.yml  publish_to_ghcr.yml
volume-cartographer/apps/: CMakeLists.txt
volume-cartographer/apps/Canny/: CMakeLists.txt  CannySegment.cpp
volume-cartographer/apps/Projection/: CMakeLists.txt  Projection.cpp
volume-cartographer/apps/VC/: VCMain.ui
volume-cartographer/apps/VC3D/: AtlasControlPointsDock.cpp  AtlasControlPointsDock.hpp  AtlasControlPointsTypes.hpp  AxisAlignedSliceController.cpp  AxisAlignedSliceController.hpp  CDistanceTransformWidget.cpp  CDistanceTransformWidget.hpp  CFiberWidget.cpp  CFiberWidget.hpp  CMakeLists.txt  COutlinedTextItem.cpp  COutlinedTextItem.hpp  CPointCollectionWidget.cpp  CPointCollectionWidget.hpp  CSegmentationEditorWindow.cpp  CSegmentationEditorWindow.hpp  CSliceViewer.cpp  CSliceViewer.hpp  CSliceViewerTiles.cpp  CState.cpp  CState.hpp  CSurfaceCollection.cpp  CSurfaceCollection.hpp  CVolumeViewer.cpp  CVolumeViewer.hpp  CVolumeViewerIntersect.cpp  CVolumeViewerIntersections.cpp  CVolumeViewerOverlay.cpp  CVolumeViewerRender.cpp  CVolumeViewerSettings.cpp  CVolumeViewerView.cpp  CVolumeViewerView.hpp  CWindow.cpp  CWindow.hpp  CWindowAreaCalculation.cpp  CWindowAxisAlignedSlices.cpp  CWindowContextMenu.cpp  CWindowExportOperations.cpp  CWindowFileWatcher.cpp  CWindowFocusHistory.cpp  (+106 more)
volume-cartographer/apps/diffusion/: common.hpp  continous.cpp  continous.hpp  continuous3d.cpp  continuous3d.hpp  discrete.cpp  discrete.hpp  spiral.cpp  spiral2.cpp  spiral2.hpp  spiral2cont.cpp  spiral_ceres.cpp  spiral_ceres.hpp  spiral_common.cpp  spiral_common.hpp  support.cpp  support.hpp  vc_diffuse_winding.cpp
volume-cartographer/apps/src/: GeneratePPM.cpp  ImgToZarr.cpp  LayerFromPPM.cpp  Mesher.cpp  Metadata.cpp  ObjAlphaCompRefinement.cpp  Packager.cpp  ProjectMesh.cpp  Render.cpp  RenderFromPPM.cpp  Segment.cpp  SliceImage.cpp  TestChunkedCompute.cpp  VolPkgExplorer.cpp  VolumeClientApp.cpp  VolumeServerApp.cpp  ZarrAlphaComp.cpp  ZarrExtract.cpp  ZarrRenderBlur.cpp  alpha_wrap.cpp  alpha_wrap.hpp  test_blosc2_h264.cpp  test_h264_zarr.cpp  vc_add_ignore_label.cpp  vc_atlas_inspect.cpp  vc_cache_prefetch.cpp  vc_calc_surface_metrics.cpp  vc_ced2d.cpp  vc_create_segment_mask.cpp  vc_cut_windings.cpp  vc_fill_quadmesh.cpp  vc_flatten.cpp  vc_gen_normalgrids.cpp  vc_grow_seg_from_seed.cpp  vc_grow_seg_from_segments.cpp  vc_lasagna_line_probe.cpp  vc_merge_patch.cpp  vc_merge_tiff_parts.cpp  vc_merge_tifxyz.cpp  vc_ngrids.cpp  (+23 more)
volume-cartographer/cmake/: BuildZ5.cmake  FindBLOSC.cmake  Findnlohmann_json.cmake  Findxtensor.cmake  Findxtl.cmake  GCCToolchain.cmake  LLVMToolchain.cmake  Packing.cmake  VCCompilerFlags.cmake  VCConfig.cmake.in  VCConstants.cmake  VCFindDependencies.cmake  VCSanitizers.cmake  VCToolchain.cmake  VCWarnings.cmake  coverage_report.cmake  run_coverage_report.cmake
volume-cartographer/core/: CMakeLists.txt
volume-cartographer/core/openmp_stub/: omp.h
volume-cartographer/core/src/: ABFFlattening.cpp  AffineTransform.cpp  Atlas.cpp  ChunkCache.cpp  ChunkStore.cpp  ChunkedTensor.cpp  Compositing.cpp  CoordGrid.cpp  CostFunctions.cpp  DiskBasedObjectBaseClass.cpp  FiberIntersections.cpp  Geometry.cpp  GridStore.cpp  GrowPatch.cpp  GrowPatch_Opt.cpp  GrowSeed.cpp  GrowSurface.cpp  InpaintSurface.cpp  Interpolation.cpp  Intersection.cpp  LoadJson.cpp  Logging.cpp  Metadata.cpp  NetworkFilesystem.cpp  NeuralTracerConnection.cpp  NormalGridVolume.cpp  PlaneSurface.cpp  PointIndex.cpp  (+39 more)
volume-cartographer/docs/: atlas_implementation.md  fiber_intersections.md  overlay_system.md  seg-editing-technical-doc.md  segmentation-editing-deformation.md  segmentation.md  streaming-renderer-plan.md
volume-cartographer/libs/: config.in
volume-cartographer/misc/: lsan.suppress  sanitizer_config.c  sanitizer_config.cpp
volume-cartographer/python/: CMakeLists.txt  volume_bindings.cpp
volume-cartographer/qt_utils/: CMakeLists.txt
volume-cartographer/scripts/: add_scroll_source.py  analyze_build_profile.py  batch_obj2tifxyz.sh  batch_seed_inpaint.sh  batch_seg_add_overlap.sh  batch_transform_geom.sh  build_dependencies.sh  build_dependencies_macos.sh  build_vtk.sh  ci.sh  convert_to_h264.py  dead-code-analysis.sh  ec2_setup.sh  fromscratch.sh  get_fiber_directions.py  get_fiber_points_and_directions.py  h264-zarr-only.sh  install_build_deps.sh  mirror_recompress.sh  overlapping_to_json.py  repair_tifxyz_spacing.py  scale_point_collection.py  setup_sudo.sh  setup_user.sh  setup_vtk_sudo.sh  snap_tifxyz_scale_to_companions.py  vc3d_aws_setup.sh  vc_easysync.py  vc_sync.py
volume-cartographer/segmentation/: CMakeLists.txt
volume-cartographer/testing/: CMakeLists.txt
volume-cartographer/utils/: CMakeLists.txt
volume-cartographer/vc/: CMakeLists.txt
(+1220 files in other folders)
